fix(yalb-1104): alignment fix - fix spacing between content and heading

--- a/components/02-molecules/text-with-image/_yds-text-with-image.scss
+++ b/components/02-molecules/text-with-image/_yds-text-with-image.scss
@@ -76,7 +76,7 @@
     }
   }
 
-  > *:not(:last-of-type) {
+  > *:not(:last-child) {
     margin-bottom: var(--size-spacing-5);
   }
 }
